None Generic SingleList Test

--- a/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
+++ b/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="AttributeTest.cs" />
     <Compile Include="CollectionTest.cs" />
+    <Compile Include="Generics\ListNode.cs" />
+    <Compile Include="Generics\SingleList.cs" />
     <Compile Include="LambdaTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
