--- a/WPFTest/WPFTest/WPFTest.csproj
+++ b/WPFTest/WPFTest/WPFTest.csproj
@@ -71,6 +71,9 @@
     <Compile Include="ButtonsWithContent.xaml.cs">
       <DependentUpon>ButtonsWithContent.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RoutedEventTest.xaml.cs">
+      <DependentUpon>RoutedEventTest.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Student.cs" />
     <Compile Include="Human.cs" />
     <Compile Include="TypeConvertTest.xaml.cs">
@@ -101,6 +104,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="RoutedEventTest.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="TypeConvertTest.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
