--- a/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
+++ b/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
@@ -53,12 +53,14 @@
     <Compile Include="DelegateTest.cs" />
     <Compile Include="DependencyPropertyTest.cs" />
     <Compile Include="EventTest.cs" />
+    <Compile Include="ExpressionTest.cs" />
     <Compile Include="Generics\Document.cs" />
     <Compile Include="Generics\DocumentManager.cs" />
     <Compile Include="Generics\IDocument.cs" />
     <Compile Include="Generics\ListNode.cs" />
     <Compile Include="Generics\DoubleList.cs" />
     <Compile Include="LambdaTest.cs" />
+    <Compile Include="LinqXmlTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringTest.cs" />
