--- a/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
+++ b/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CollectionTest.cs" />
     <Compile Include="DelegateTest.cs" />
     <Compile Include="DependencyPropertyTest.cs" />
+    <Compile Include="DictionaryTest.cs" />
     <Compile Include="EventTest.cs" />
     <Compile Include="ExpressionTest.cs" />
     <Compile Include="Generics\Document.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringTest.cs" />
     <Compile Include="TimerTest.cs" />
+    <Compile Include="TupleTest.cs" />
     <Compile Include="UnitTest\Subscription.cs" />
     <Compile Include="UnitTest\SubscriptionTest.cs" />
   </ItemGroup>
