StringTest:split HashSetTest:Add Contains UnionWith ConfigNode:GetCustomAttributes PropertyInfo PropertyInfoType GetType GetProperties

--- a/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
+++ b/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
@@ -60,9 +60,11 @@
     <Compile Include="Generics\IDocument.cs" />
     <Compile Include="Generics\ListNode.cs" />
     <Compile Include="Generics\DoubleList.cs" />
+    <Compile Include="HashSetTest.cs" />
     <Compile Include="LambdaTest.cs" />
     <Compile Include="LinqTest.cs" />
     <Compile Include="LinqXmlTest.cs" />
+    <Compile Include="NotifyObjectBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringTest.cs" />
