--- a/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
+++ b/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>ConsoleApplicationTest.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -49,6 +52,7 @@
     <Compile Include="ActionTest.cs" />
     <Compile Include="ArrayTest.cs" />
     <Compile Include="AttributeTest.cs" />
+    <Compile Include="ClassTest.cs" />
     <Compile Include="CollectionTest.cs" />
     <Compile Include="DelegateTest.cs" />
     <Compile Include="DependencyPropertyTest.cs" />
@@ -57,6 +61,7 @@
     <Compile Include="ExpressionTest.cs" />
     <Compile Include="Generics\Document.cs" />
     <Compile Include="Generics\DocumentManager.cs" />
+    <Compile Include="Generics\GenericTest.cs" />
     <Compile Include="Generics\IDocument.cs" />
     <Compile Include="Generics\ListNode.cs" />
     <Compile Include="Generics\DoubleList.cs" />
@@ -64,7 +69,8 @@
     <Compile Include="LambdaTest.cs" />
     <Compile Include="LinqTest.cs" />
     <Compile Include="LinqXmlTest.cs" />
-    <Compile Include="NotifyObjectBase.cs" />
+    <Compile Include="Work\ConfigNode.cs" />
+    <Compile Include="Work\NotifyObjectBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringTest.cs" />
