--- a/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
+++ b/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
@@ -69,6 +69,7 @@
     <Compile Include="LambdaTest.cs" />
     <Compile Include="LinqTest.cs" />
     <Compile Include="LinqXmlTest.cs" />
+    <Compile Include="Network\TcpClientTest.cs" />
     <Compile Include="Work\ConfigNode.cs" />
     <Compile Include="Work\NotifyObjectBase.cs" />
     <Compile Include="Program.cs" />
