--- a/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
+++ b/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
@@ -71,6 +71,7 @@
     <Compile Include="LinqTest.cs" />
     <Compile Include="LinqXmlTest.cs" />
     <Compile Include="Network\TcpClientTest.cs" />
+    <Compile Include="TheadTest\BaseThread.cs" />
     <Compile Include="Work\ConfigNode.cs" />
     <Compile Include="Work\NotifyObjectBase.cs" />
     <Compile Include="Program.cs" />
