--- a/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
+++ b/ConsoleApplicationTest/ConsoleApplicationTest/ConsoleApplicationTest.csproj
@@ -55,9 +55,11 @@
     <Compile Include="AttributeTest.cs" />
     <Compile Include="ClassTest.cs" />
     <Compile Include="CollectionTest.cs" />
+    <Compile Include="ConcurrentCollectionTest.cs" />
     <Compile Include="DelegateTest.cs" />
     <Compile Include="DependencyPropertyTest.cs" />
     <Compile Include="DictionaryTest.cs" />
+    <Compile Include="EnumeratorTest.cs" />
     <Compile Include="EventTest.cs" />
     <Compile Include="ExpressionTest.cs" />
     <Compile Include="Generics\Document.cs" />
@@ -87,6 +89,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="WPF\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
