--- a/ConsoleApplicationTest/NewFeaturesTest/NewFeaturesTest.csproj
+++ b/ConsoleApplicationTest/NewFeaturesTest/NewFeaturesTest.csproj
@@ -8,9 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>NewFeaturesTest</RootNamespace>
     <AssemblyName>NewFeaturesTest</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -44,8 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassFeatures.cs" />
+    <Compile Include="ComparerFeatures.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryFeatures.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
